--- a/css/global.css
+++ b/css/global.css
@@ -298,3 +298,13 @@ hgroup, menu, nav, section {
 		float: left;
 		padding:5%;
 }
+.bt-CTK {
+		background-color: #277696;
+		padding: 8px 18px ;
+		font-size: 1.5em;
+		border-radius: 20px;
+		border: none;
+		margin-top: 40px;
+		color: #fff;
+		font-weight: 200;
+}
