--- a/css/global.css
+++ b/css/global.css
@@ -37,7 +37,7 @@ hgroup {
 h1, .h1-like {
 	font-size: 4.9em; /* equiv 26px */
 	font-weight: normal;
-	line-height: 1.6154em;
+	line-height: 1.1em;
 	margin: .8077em 0 0 0;
   color: #277696;
   margin: 0px;
@@ -46,7 +46,7 @@ h1, .h1-like {
 h2, .h2-like {
 	font-size: 1.4286em; /* equiv 20px */
 	font-weight: normal;
-	line-height: 0.5em;
+	line-height: 1.5em;
 	margin: .875em 0 0 0;
   color: #fff;
   margin: 0px;
@@ -298,6 +298,11 @@ hgroup, menu, nav, section {
 		float: left;
 		padding:5%;
 }
+.animation {
+	width: 100%;
+	margin: auto;
+	position: absolute;
+}
 .bt-CTK {
 		background-color: #277696;
 		padding: 8px 18px ;
@@ -307,4 +312,15 @@ hgroup, menu, nav, section {
 		margin-top: 40px;
 		color: #fff;
 		font-weight: 200;
+		text-align: center;
+    text-decoration: none;
+    display: inline-block;
+		outline:none;
+		cursor: pointer;
+}
+
+.bt-CTK:hover {
+    background-color: #4CAF50; /* Green */
+    color: white;
+		box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
